@@ -17,6 +17,9 @@
 	<LI>HTMLDOC now allows the author to omit headings from
 	the TOC using the _HD_OMIT_TOC attribute.
 
+	<LI>HTMLDOC now supports remote book files when running
+	from the command-line.
+
 	<H3>Changes</H3>
 
 	<LI>HTMLDOC now calculates the resolution of the body
